--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
                 <option value="Month">Показывать в месяцах</option>
             </select>
         </div>
-    </div>
+        <div class="input-field">
+            <select id="result-select">
+                <option value="1">Результат 1</option>
+                <option value="2">Результат 2</option>
+                <option value="3">Результат 3</option>
+            </select>
+        </div>
     </div>
 
     <svg id="gantt"></svg>
