--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
                 <option value="Month">Показывать в месяцах</option>
             </select>
         </div>
+
         <div class="input-field">
+            <input id="json-edit" type="text" class="validate">
+            <label for="json-edit">Json</label>
+        </div>
+        <a href="" id="parse" class="modal-close waves-effect waves-light btn">Распарсить</a>
+        <!-- <div class="input-field">
             <select id="result-select">
                 <option value="1">Результат 1</option>
                 <option value="2">Результат 2</option>
                 <option value="3">Результат 3</option>
             </select>
-        </div>
+        </div> -->
     </div>
 
     <svg id="gantt"></svg>
