--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input id="json-edit" type="text" class="validate">
             <label for="json-edit">Json</label>
         </div>
-        <a href="" id="parse" class="modal-close waves-effect waves-light btn">Распарсить</a>
+        <a href="#" id="parse" class="modal-close waves-effect waves-light btn">Распарсить</a>
         <!-- <div class="input-field">
             <select id="result-select">
                 <option value="1">Результат 1</option>
