--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <div class="header">
-        <button data-target="modal1" class="btn modal-trigger">Управление задачами</button>
+        <!-- <button data-target="modal1" class="btn modal-trigger">Управление задачами</button> -->
         <div class="input-field">
             <select id="visible-select">
-                <option value="Day">Показывать в днях</option>
-                <option value="Week">Показывать в неделях</option>
-                <option value="Month">Показывать в месяцах</option>
+                <option value="Day">Показать в днях</option>
+                <option value="Week">Показать в неделях</option>
+                <option value="Month">Показать в месяцах</option>
             </select>
         </div>
 
